--- a/main.html
+++ b/main.html
@@ -154,8 +154,16 @@
 
   <!-- زر الهدايا -->
   <button class="gift-box" onclick="alert('هدية لك!')">🎁</button>
+  <!-- رابط سياسة الإعلان -->
+<div style="position: fixed; bottom: 0; left: 0; right: 0; text-align: center; padding: 10px;">
+  <a href="play.html" style="color: black; text-decoration: none; font-size: 16px;">
+    سياسة الإعلان
+  </a>
+</div>
+
 </body>
 </html>
+
 
 
 
