--- a/play.html
+++ b/play.html
@@ -4,16 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تنويه الإعلانات</title>
+
+  <!-- كود تهيئة AdSense -->
+  <script async 
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5814253816484006"
+    crossorigin="anonymous"></script>
+
   <style>
-    html, body { height: 100%; }
+    html, body { height: 100%; margin: 0; }
     body {
-      margin: 0;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans Arabic", "Cairo", sans-serif;
       background: radial-gradient(circle at 20% 20%, #0d1b2a 0%, #0a192f 40%, #020817 100%);
       color: #e6edf3;
       display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
+      min-height: 100vh;
     }
     .card {
       max-width: 760px;
@@ -25,6 +32,7 @@
       border-radius: 24px;
       padding: 28px 24px;
       text-align: center;
+      margin: 20px 0;
     }
     .card p {
       margin: 0;
@@ -32,9 +40,30 @@
       line-height: 2;
     }
     .card p .break { display: block; height: 14px; }
+    .ad-banner {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
+
+  <!-- بانر الإعلان العلوي -->
+  <div class="ad-banner">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5814253816484006"
+         data-ad-slot="1234567890"   <!-- غيّر ده -->
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
+  <!-- الكارت -->
   <main class="card" role="main" aria-label="تنويه حول الإعلانات">
     <p>
       نحيط علم حضراتكم بالآتي:
@@ -44,5 +73,20 @@
       نتمنى لكم الاستمتاع باللعب
     </p>
   </main>
+
+  <!-- بانر الإعلان السفلي -->
+  <div class="ad-banner">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5814253816484006"
+         data-ad-slot="9876543210"   <!-- غيّر ده -->
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
 </body>
 </html>
+
