--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Start & Game</title>
+
+  <!-- كود جوجل ادسنس -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5814253816484006"
+     crossorigin="anonymous"></script>
+
   <style>
     :root{
       --bg1: #0f0c29;
@@ -26,7 +31,7 @@
     }
     @keyframes gradientMove{0%{background-position:0% 0%} 50%{background-position:100% 100%} 100%{background-position:0% 0%}}
 
-    canvas#space{position:fixed; inset:0; width:100%; height:100%; display:block;}
+    canvas#space{position:fixed; inset:0; width:100%; height:100%; display:block; z-index:-1;}
     .grid-overlay{position:fixed; inset:0; background-image:
       linear-gradient(rgba(255,255,255,.04) 1px, transparent 1px),
       linear-gradient(90deg, rgba(255,255,255,.04) 1px, transparent 1px);
@@ -54,33 +59,10 @@
 
     h1{margin-bottom:24px; font-size:clamp(24px,4vw,36px)}
 
-    /* Game Screen */
-    #gameScreen{
-      display:none; flex-direction:column; align-items:center; justify-content:flex-start; padding:20px; text-align:center;
-      background:rgba(255,255,255,0.08); backdrop-filter:blur(10px);
-      overflow-y:auto;
-    }
-    #gameScreen h1{
-      margin-top:20px; margin-bottom:10px; font-size:clamp(22px,4vw,32px); color:white;
-    }
-    .hint-box{
-      background:rgba(255,255,255,0.15);
-      border-radius:12px;
-      padding:10px 20px;
-      margin-bottom:20px;
-      color:#fff;
-      font-size:18px;
-    }
-    .letters{
-      display:flex; gap:12px; justify-content:center; margin-top:20px; flex-wrap:wrap;
-    }
-    .letter-box{
-      width:50px; height:50px;
-      border-radius:12px;
-      border:2px solid var(--primary-2);
-      background:rgba(255,255,255,0.1);
-      display:flex; align-items:center; justify-content:center;
-      font-size:24px; font-weight:bold; color:#fff;
+    /* أماكن البانرات */
+    .ads-container{
+      width:100%; text-align:center; margin:10px 0;
+      z-index:1000; position:relative;
     }
   </style>
 </head>
@@ -88,20 +70,39 @@
   <canvas id="space"></canvas>
   <div class="grid-overlay"></div>
 
+  <!-- إعلان بنر فوق -->
+  <div class="ads-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5814253816484006"
+         data-ad-slot="1234567890"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+  </div>
+
   <!-- Start Screen -->
   <div class="screen active" id="startScreen">
     <div class="panel">
       <h1>جاهز؟ 🚀</h1>
-      <button class="start-btn" id="startBtn" href="main.html">START</button>
+      <button class="start-btn" id="startBtn">START</button>
     </div>
+  </div>
+
+  <!-- إعلان بنر تحت -->
+  <div class="ads-container">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5814253816484006"
+         data-ad-slot="0987654321"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
 
   <script>
     const startScreen = document.getElementById('startScreen');
-
-    // إضافة خاصية للزر لفتح صفحة "fourT.html" عند الضغط
     document.getElementById('startBtn').addEventListener('click', ()=>{
-      // عند الضغط، يتم الانتقال إلى "fourT.html"
       window.location.href = 'main.html';
     });
 
@@ -139,4 +140,6 @@
   </script>
 </body>
 </html>
+
+
 
