--- a/index.html
+++ b/index.html
@@ -18,35 +18,39 @@
       --primary-2: #39c2ff;
     }
 
-    *{box-sizing:border-box}
-    html,body{height:100%; margin:0;}
+    html,body{height:100%; margin:0; overflow:hidden;}
     body{
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
-      overflow:hidden;
+      font-family: Arial, sans-serif;
       background: radial-gradient(1200px 600px at 10% 10%, rgba(57,194,255,.06), transparent 60%),
                   radial-gradient(800px 400px at 80% 30%, rgba(124,255,243,.07), transparent 60%),
                   linear-gradient(135deg, var(--bg1), var(--bg2), var(--bg3));
       background-size: 200% 200%;
       animation: gradientMove 18s ease-in-out infinite;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
     }
-    @keyframes gradientMove{0%{background-position:0% 0%} 50%{background-position:100% 100%} 100%{background-position:0% 0%}}
+    @keyframes gradientMove{
+      0%{background-position:0% 0%}
+      50%{background-position:100% 100%}
+      100%{background-position:0% 0%}
+    }
 
-    canvas#space{position:fixed; inset:0; width:100%; height:100%; display:block; z-index:-1;}
-    .grid-overlay{position:fixed; inset:0; background-image:
-      linear-gradient(rgba(255,255,255,.04) 1px, transparent 1px),
-      linear-gradient(90deg, rgba(255,255,255,.04) 1px, transparent 1px);
-      background-size: 40px 40px, 40px 40px; pointer-events:none; mix-blend-mode: soft-light;}
-
-    .screen{position:fixed; inset:0; display:none; align-items:center; justify-content:center; flex-direction:column;}
-    .active{display:flex;}
+    .ads-container{
+      width:100%;
+      text-align:center;
+      margin:10px 0;
+    }
 
     .panel{
       backdrop-filter: blur(8px);
-      background: rgba(255,255,255,.2);
+      background: rgba(255,255,255,.15);
       border:1px solid rgba(255,255,255,.2);
       border-radius:20px;
       padding:40px;
       text-align:center;
+      margin:30px 0;
     }
 
     .start-btn{
@@ -56,90 +60,44 @@
       color:#001014; cursor:pointer; transition:.3s;
     }
     .start-btn:hover{transform:scale(1.05)}
-
-    h1{margin-bottom:24px; font-size:clamp(24px,4vw,36px)}
-
-    /* أماكن البانرات */
-    .ads-container{
-      width:100%; text-align:center; margin:10px 0;
-      z-index:1000; position:relative;
-    }
   </style>
 </head>
 <body>
-  <canvas id="space"></canvas>
-  <div class="grid-overlay"></div>
 
-  <!-- إعلان بنر فوق -->
+  <!-- إعلان فوق -->
   <div class="ads-container">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-5814253816484006"
-         data-ad-slot="1234567890"
-         data-ad-format="auto"
+         data-ad-slot="auto"
+         data-ad-format="horizontal"
          data-full-width-responsive="true"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
 
-  <!-- Start Screen -->
-  <div class="screen active" id="startScreen">
-    <div class="panel">
-      <h1>جاهز؟ 🚀</h1>
-      <button class="start-btn" id="startBtn">START</button>
-    </div>
+  <!-- زرار البداية -->
+  <div class="panel">
+    <h1 style="color:white">Guessing Game 🚀</h1>
+    <a href="main.html">
+      <button class="start-btn">START</button>
+    </a>
   </div>
 
-  <!-- إعلان بنر تحت -->
+  <!-- إعلان تحت -->
   <div class="ads-container">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-5814253816484006"
-         data-ad-slot="0987654321"
-         data-ad-format="auto"
+         data-ad-slot="auto"
+         data-ad-format="horizontal"
          data-full-width-responsive="true"></ins>
     <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
   </div>
 
-  <script>
-    const startScreen = document.getElementById('startScreen');
-    document.getElementById('startBtn').addEventListener('click', ()=>{
-      window.location.href = 'main.html';
-    });
-
-    // Background particles
-    const canvas = document.getElementById('space');
-    const ctx = canvas.getContext('2d');
-    let w,h,dpr;
-    function resize(){
-      w = canvas.width = window.innerWidth * (window.devicePixelRatio||1);
-      h = canvas.height = window.innerHeight * (window.devicePixelRatio||1);
-      dpr = window.devicePixelRatio||1;
-    }
-    window.addEventListener('resize', resize);
-    resize();
-
-    const circles = Array.from({length:25},()=>({
-      x:Math.random()*w,
-      y:Math.random()*h,
-      r:10+Math.random()*20,
-      vy:0.2+Math.random()*0.5
-    }));
-
-    function animate(){
-      ctx.clearRect(0,0,w,h);
-      ctx.fillStyle='rgba(124,255,243,0.2)';
-      circles.forEach(c=>{
-        ctx.beginPath(); ctx.arc(c.x,c.y,c.r,0,Math.PI*2);
-        ctx.fill();
-        c.y -= c.vy;
-        if(c.y + c.r < 0){c.y = h+c.r; c.x=Math.random()*w;}
-      });
-      requestAnimationFrame(animate);
-    }
-    animate();
-  </script>
 </body>
 </html>
+
+
 
 
 
