--- a/index.html
+++ b/index.html
@@ -58,37 +58,32 @@
 
     h1{margin-bottom:24px; font-size:clamp(24px,4vw,36px)}
 
-    /* Game Screen */
-    #gameScreen{
-      display:none; flex-direction:column; align-items:center; justify-content:flex-start; padding:20px; text-align:center;
-      background:rgba(255,255,255,0.08); backdrop-filter:blur(10px);
-      overflow-y:auto;
-    }
-    #gameScreen h1{
-      margin-top:20px; margin-bottom:10px; font-size:clamp(22px,4vw,32px); color:white;
-    }
-    .hint-box{
-      background:rgba(255,255,255,0.15);
-      border-radius:12px;
-      padding:10px 20px;
-      margin-bottom:20px;
-      color:#fff;
-      font-size:18px;
-    }
-    .letters{
-      display:flex; gap:12px; justify-content:center; margin-top:20px; flex-wrap:wrap;
-    }
-    .letter-box{
-      width:50px; height:50px;
-      border-radius:12px;
-      border:2px solid var(--primary-2);
-      background:rgba(255,255,255,0.1);
-      display:flex; align-items:center; justify-content:center;
-      font-size:24px; font-weight:bold; color:#fff;
+    /* إعلان سفلي ثابت */
+    .bottom-ad {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      background: rgba(0,0,0,0.1);
+      z-index: 9999;
     }
   </style>
 </head>
 <body>
+  <!-- بانر الإعلان العلوي -->
+  <div class="ad-banner" style="text-align:center; margin:10px 0;">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-5814253816484006"
+         data-ad-slot="6040336062"   <!-- غيّر الرقم ده برقم الوحدة الإعلانية -->
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
+
   <canvas id="space"></canvas>
   <div class="grid-overlay"></div>
 
@@ -102,10 +97,7 @@
 
   <script>
     const startScreen = document.getElementById('startScreen');
-
-    // إضافة خاصية للزر لفتح صفحة "fourT.html" عند الضغط
     document.getElementById('startBtn').addEventListener('click', ()=>{
-      // عند الضغط، يتم الانتقال إلى "fourT.html"
       window.location.href = 'main.html';
     });
 
@@ -141,25 +133,13 @@
     }
     animate();
   </script>
-   <!-- بانر الإعلان العلوي -->
-  <div class="ad-banner">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-5814253816484006"
-         data-ad-slot="1234567890"   
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
 
   <!-- بانر الإعلان السفلي -->
-  <div class="ad-banner">
+  <div class="bottom-ad">
     <ins class="adsbygoogle"
          style="display:block"
          data-ad-client="ca-pub-5814253816484006"
-         data-ad-slot="9876543210"   <!-- غيّر ده -->
+         data-ad-slot="9876543210"   <!-- غيّر الرقم ده برقم الوحدة الإعلانية -->
          data-ad-format="auto"
          data-full-width-responsive="true"></ins>
     <script>
@@ -168,6 +148,7 @@
   </div>
 </body>
 </html>
+
 
 
 
