--- a/main.html
+++ b/main.html
@@ -79,6 +79,22 @@
       transition: background-color 0.3s;
     }
     .gift-box:hover {background-color: #ff9b00;}
+    .policy-link {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      text-align: center;
+      padding: 10px;
+    }
+    .policy-link a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 16px;
+    }
+    .policy-link a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -121,8 +137,14 @@
 
   <!-- زر الهدايا -->
   <button class="gift-box" onclick="alert('هدية لك!')">🎁</button>
+
+  <!-- رابط سياسة الإعلان -->
+  <div class="policy-link">
+    <a href="play.html">سياسة الإعلان</a>
+  </div>
 </body>
 </html>
+
 
 
 
