--- a/play.html
+++ b/play.html
@@ -46,6 +46,14 @@
       justify-content: center;
       margin: 10px 0;
     }
+    .card a {
+      color: #4da6ff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .card a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -70,7 +78,8 @@
       <span class="break"></span>
       هذه الأزرار خاصة بالإعلان ولستم مضطرين لمشاهدة هذه الإعلانات، فهي لأغراض ترفيهية اختيارية ولستم مضطرين للمشاهدة في شيء.
       <span class="break"></span>
-      نتمنى لكم الاستمتاع باللعب
+      نتمنى لكم الاستمتاع باللعب للمزيد 
+      <a href="info.html">About.US</a>
     </p>
   </main>
 
@@ -89,4 +98,5 @@
 
 </body>
 </html>
+
 
