--- a/play.html
+++ b/play.html
@@ -76,9 +76,9 @@
     <p>
       نحيط علم حضراتكم بالآتي:
       <span class="break"></span>
-      هذه الأزرار خاصة بالإعلان ولستم مضطرين لمشاهدة هذه الإعلانات، فهي لأغراض ترفيهية اختيارية ولستم مضطرين للمشاهدة في شيء.
+      : نود اعلام حضراتكم بالاتي 
       <span class="break"></span>
-      نتمنى لكم الاستمتاع باللعب للمزيد 
+      ان هذه الاعلانات لغرض الدعاية ولستم مضطرين ابدا للدخول للاعلانات او زيارتها 
       <a href="info.html">About.US</a>
     </p>
   </main>
@@ -98,5 +98,6 @@
 
 </body>
 </html>
+
 
 
