--- a/info.html
+++ b/info.html
@@ -74,11 +74,11 @@
   <!-- الكارت -->
   <main class="card" role="main" aria-label="تنويه حول الإعلانات">
     <p>
-     هذه اللعبة غرضها دفع للعقل للتكير خارج الصندوق ومحاولة ايجاد الحلول وسط الكثير من الاجابات 
+     هذه اللعبة غرضها دفع العقل للتفكير خارج الصندوق ومحاولة ايجاد الحلول وسط الكثير من الاجابات 
       <span class="break"></span>
-      هذه المراحل كل واحدةمنهم عندالاجابة على السوال تكسب خمس نقاط وفي حالة اجتياز 10 عشرة اسئلة متتالية ستحصل على 1000 نقطة وفي حالة الخطا  ثلاث مرات متتالية في تخمين الكلمة سوف يتم خصم نقطتان من النقاط الحاصل عليها اللاعب نتمنى ان تنال اللعبة على اعجابكم
+     هذه المراحل كل واحدة منهم عند الاجابة على السوال يحصل اللاعب على خمس نقاط وفي حالة الخطا  ثلاث مرات متتالية في تخمين الكلمة سوف يتم خصم نقطتان من النقاط الحاصل عليها اللاعب 
       <span class="break"></span> 
-     
+     نتمنى ان تنال اللعبة على اعجابكم
     </p>
   </main>
 
@@ -96,4 +96,5 @@
   </div>
 
 </body>
+
 </html>
