--- a/info.html
+++ b/info.html
@@ -76,7 +76,16 @@
     <p>
      هذه اللعبة غرضها دفع العقل للتفكير خارج الصندوق ومحاولة ايجاد الحلول وسط الكثير من الاجابات 
       <span class="break"></span>
-     هذه المراحل كل واحدة منهم عند الاجابة على السوال يحصل اللاعب على خمس نقاط وفي حالة الخطا  ثلاث مرات متتالية في تخمين الكلمة سوف يتم خصم نقطتان من النقاط الحاصل عليها اللاعب 
+وتنمية مهارات التفكير والمساعدة على وجود الحلول الاكثر منطقية
+      <span class="break"></span>
+: التعليمات 
+      <span class="break"></span>
+                     هذه المراحل كل واحدة منهم عند الاجابة على السوال يحصل اللاعب على خمس نقاط -
+      <span class="break"></span>
+     و في حالة الخطا  ثلاث مرات متتالية في تخمين الكلمة سوف يتم خصم نقطتان من النقاط الحاصل عليها اللاعب -
+      
+      <span class="break"></span>
+     
       <span class="break"></span> 
      نتمنى ان تنال اللعبة على اعجابكم
     </p>
@@ -98,3 +107,4 @@
 </body>
 
 </html>
+
