--- a/play.html
+++ b/play.html
@@ -56,7 +56,32 @@
     }
   </style>
 </head>
+  
 <body>
+  <!-- زر الرجوع -->
+<button class="back-btn" onclick="window.location.href='play.html'">←</button>
+
+<style>
+  .back-btn {
+    position: fixed;
+    top: 10px;
+    left: 10px; /* فوق شمال */
+    padding: 10px 15px;
+    background-color: var(--primary-2); /* الأزرق من ألوان الخلفية */
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 18px;
+    color: #fff;
+    transition: background-color 0.3s, transform 0.2s;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  }
+  .back-btn:hover {
+    background-color: #5ecbff; /* أزرق أفتح */
+    transform: scale(1.1);
+  }
+</style>
+
 
   <!-- بانر الإعلان العلوي -->
   <div class="ad-banner">
@@ -98,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
