--- a/play.html
+++ b/play.html
@@ -59,7 +59,7 @@
   
 <body>
   <!-- زر الرجوع -->
-<button class="back-btn" onclick="window.location.href='play.html'">←</button>
+<button class="back-btn" onclick="window.location.href='main.html'">←</button>
 
 <style>
   .back-btn {
@@ -123,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
