--- a/play.html
+++ b/play.html
@@ -65,7 +65,7 @@
   .back-btn {
     position: fixed;
     top: 10px;
-    left: 10px; /* فوق شمال */
+    right: 10px; /* فوق شمال */
     padding: 10px 15px;
     background-color: var(--primary-2); /* الأزرق من ألوان الخلفية */
     border: none;
@@ -123,6 +123,7 @@
 
 </body>
 </html>
+
 
 
 
