--- a/info.html
+++ b/info.html
@@ -71,7 +71,7 @@
     </script>
   </div>
     <!-- زر الرجوع -->
-<button class="back-btn" onclick="window.location.href='main.html'">←</button>
+<button class="back-btn" onclick="window.location.href='play.html'">←</button>
 
 <style>
   .back-btn {
@@ -130,5 +130,6 @@
 </body>
 
 </html>
+
 
 
