--- a/level1.html
+++ b/level1.html
@@ -86,7 +86,8 @@
   .back-btn {
     position: fixed;
     top: 10px;
-    right: 10px; /* فوق شمال */
+    left: 50%;              /* يبدأ من منتصف الصفحة */
+    transform: translateX(-50%);
     padding: 10px 15px;
     background-color: var(--primary-2); /* الأزرق من ألوان الخلفية */
     border: none;
@@ -264,6 +265,7 @@
   </script>
 </body>
 </html>
+
 
 
 
