--- a/play.html
+++ b/play.html
@@ -95,18 +95,25 @@
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
   </div>
-
   <!-- الكارت -->
   <main class="card" role="main" aria-label="تنويه حول الإعلانات">
     <p>
-      نحيط علم حضراتكم بالآتي:
+                 : نحيط علم حضراتكم بالآتي  
+          <span class="break"></span>
+             اننا لا نجمع اي معلومات تخص حضراتكم     
       <span class="break"></span>
-    
+          وان حضراتكم لستم مضطرين لمشاهدة هذه الإعلانات 
       <span class="break"></span>
-      ان هذه الاعلانات لغرض الدعاية ولستم مضطرين ابدا للدخول للاعلانات او زيارتها 
+     فهي لأغراض الدعاية ولكم اختيارية المشاهدة ولستم مضطرين للمشاهدة في شئ
+      <span class="break"></span>
+            وان هدفنا الاساسي هو تقديم النفع العلمي والعقلي لكم 
+      <span class="break"></span> 
+               نتمنى لكم الاستمتاع باللعب للمزيد 
       <a href="info.html">About.US</a>
     </p>
   </main>
+
+
 
   <!-- بانر الإعلان السفلي -->
   <div class="ad-banner">
@@ -123,6 +130,7 @@
 
 </body>
 </html>
+
 
 
 
